# aoc_2024_cpp

./: .gitignore  README.md
day2/: CMakeLists.txt  README.md  main.cpp  safe.txt  unsafe.txt
day2/src/: CMakeLists.txt  aoc.cpp  aoc.h  codeConfig.h.in  main.cpp
day2/test/: CMakeLists.txt  aoc_test.cpp  aoc_test_2.cpp  main_test.cpp
